Gave a personal description, job info and fun fact

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 
 		<section class="job">
             <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+			<p>I work at a Walmart warehouse as a loader and desk clerk.</p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <p>One of my main hobbies is camping. I really enjoy many outdoor activities like biking, fishing, and boating, so traveling to new and far away places is something that I love to do. This past year I went canoeing up in the boundary waters near the Canadian border. I had a ton of fun just following the map and the area, especially the sunsets, which were really beautiful</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>I cannot whistle.</p>
         </section>
     </div>
 </body>
