--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="lewis">
 			<h2>Year at Lewis: 3</h2>
 			<h2>Lewis major/minor/concentrations: Physics</h2>
-			<h2>Reasons for pursuing this degree: I am a physics major; I want to find a minor, but I just haven’t come across anything yet. Ever since I first took a physics class in high school, it has always piqued my interest and been something I wanted to do.</h2>
+			<p>Reasons for pursuing this degree: I am a physics major; I want to find a minor, but I just haven’t come across anything yet. Ever since I first took a physics class in high school, it has always piqued my interest and been something I wanted to do.</h2>
         </section>
 
 		<section class="course">
@@ -47,7 +47,7 @@
         </section>
 
 		<section class="job">
-            <p>Current/Recent Job</p>
+            <h2>Current/Recent Job</p>
 			<p>I work at a Walmart warehouse as a loader and desk clerk.</p>
         </section>		
 
