--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .main-info h1 {
             margin: 0;
         }
-        .hobbies, .lewis, .course, .job {
+        .hobbies, .lewis, .course, .job, .fun-fact {
             background: #e7e7e7;
             padding: 15px;
             margin-bottom: 10px;
@@ -47,7 +47,7 @@
         </section>
 
 		<section class="job">
-            <h2>Current/Recent Job</p>
+            <h2>Current Job</h2>
 			<p>I work at a Walmart warehouse as a loader and desk clerk.</p>
         </section>		
 
@@ -59,6 +59,13 @@
         <section class="fun-fact">
             <h2>Fun Fact</h2>
             <p>I cannot whistle.</p>
+        </section>
+
+	     </section>
+
+        <section class="date">
+            <p>Last Updated</p>
+            <p>Date: 01/29/2024.</p>
         </section>
     </div>
 </body>
