--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 
 	     </section>
 
+
+	     <section class="date">
+            <p>Last Updated</p>
+            <p>Created using a template for an online introductory by Eric Pogue and ChatGPT</p>
+        </section>
         <section class="date">
             <p>Last Updated</p>
             <p>Date: 01/29/2024.</p>
