--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         .main-info {
             background: #333;
-            color: #fff;
+            color: #eee;
             padding: 20px;
         }
         .main-info h1 {
